feat(builds): expose builds at /builds url
